Fixed overflow issue

--- a/mobile-first/css/700px.css
+++ b/mobile-first/css/700px.css
@@ -4,4 +4,5 @@
   width: 700px;
   margin-left: auto;
   margin-right: auto;
+  overflow-x: hidden;
 }
