--- a/mobile-first/css/tablet.css
+++ b/mobile-first/css/tablet.css
@@ -7,5 +7,6 @@
 }
 
 .plans-container__slider {
+  overflow: hidden;
   justify-content: center;
 }
